# func-to-gen

./: .gitattributes  LICENSE  OLLAMA_OFFLINE_SETUP.md  pyproject.toml
.ollama/.ollama/models/blobs/: sha256-13014eef637dda50e7a73e6a29e182ec87a39a690be4c8d673b522d04434e144  sha256-ce4a164fc04605703b485251fe9f1a181688ba0eb6badb80cc6335c0de17ca0d
.ollama/models/blobs/: sha256-31df23ea7daa448f9ccdbbcecce6c14689c8552222b80defd3830707c0139d4f
src/func_to_gen/: __init__.py  app.py  routes.py  utils.py
tests/: __init__.py  conftest.py  test_chat_completions.py  test_completions.py  test_embeddings.py  test_health.py  test_models.py  test_ollama_chat.py  test_ollama_generate.py  test_ollama_tags.py
